fixed spacing issue with left menu

--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -35,10 +35,10 @@
     }
     &__item {
     background-color: none;
-    padding-top: 15px;;
+    padding-top: 15px;
     }
     &__auth {
-    padding-top: 15px;
+    //padding-top: 15px;
     background-color: none;
     }
   }
